# LuminaVS

./: .coverage  .gitignore  README.md  build.gradle.kts  local.properties  settings.gradle.kts
.github/: copilot-instructions.md
.github/workflows/: build-publish.yml
.venv312/: pyvenv.cfg
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/lumina/engine/camera/: CachingImageAnalyzerInstrumentationTest.kt  CachingImageAnalyzerTest.kt  CameraAnalyzerTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: lumina_app_logic.json  qwen_grammar.gbnf
app/src/main/assets/shaders/glsl/: chromatic_aberration.frag  color_grade.frag  noise.frag  passthrough.frag  passthrough.vert  sharpen.frag  soften.frag  vignette.frag
app/src/main/assets/shaders/vulkan/: chromatic_aberration.frag  chromatic_aberration.frag.spv  color_grade.frag  color_grade.frag.spv  noise.frag  noise.frag.spv  passthrough.frag  passthrough.frag.spv  passthrough.vert  passthrough.vert.spv  sharpen.frag  sharpen.frag.spv  soften.frag  soften.frag.spv  vignette.frag  vignette.frag.spv
app/src/main/cpp/: CMakeLists.txt  engine_structs.h  json_parser.cpp  json_parser.h  lumina_engine.cpp  lumina_engine.h  native-lib.cpp  renderer_gles.cpp  renderer_gles.h  renderer_vulkan.cpp  renderer_vulkan.h
app/src/main/cpp/nlohmann/: json.hpp
app/src/main/cpp/tests/: test_engine.cpp
app/src/main/java/com/lumina/engine/: CachingImageAnalyzer.kt  CameraAnalyzerFactory.kt  CameraController.kt  DirectBufferPool.kt  INativeEngine.kt  LuminaApplication.kt  LuminaCore.kt  LuminaViewModel.kt  MainActivity.kt  ModelDownloadWorker.kt  ModelDownloader.kt  NativeEngine.kt  VideoEditor.kt
app/src/main/java/com/lumina/engine/model/: LuminaModels.kt
app/src/main/java/com/lumina/engine/settings/: SettingsRepository.kt
app/src/main/java/com/lumina/engine/ui/: LuminaApp.kt
app/src/main/java/com/lumina/engine/ui/components/: CameraPreviewArea.kt  GlassyComponents.kt  IntentSummaryCard.kt
app/src/main/java/com/lumina/engine/ui/theme/: Theme.kt
app/src/main/python/: cgi.py  classifiers.py  config.py  intent_types.py  orchestrator.py  pipeline.py
app/src/main/python/graph/: __init__.py  dag.py
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/com/lumina/engine/: AdditionalTests.kt  CameraControllerTest.kt  DirectBufferPoolTest.kt  LuminaViewModelTest.kt  ModelDownloaderTest.kt
app/src/test/java/com/lumina/engine/camera/: DirectBufferPoolTest.kt
app/src/test/java/com/lumina/engine/engine/: NativeEngineTest.kt
app/src/test/java/com/lumina/engine/viewmodel/: LuminaViewModelTest.kt
app/src/test/python/: test_orchestrator.py
coverage_reports/: python_coverage.xml
